[package]
name = "stream-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
iced = { version = "0.9.0", features = ["default", "canvas", "image", "tokio"] }
iced_native = "0.10.3"
once_cell = "1.18.0"
